reg_success-tooken-div

--- a/public/reg_success.html
+++ b/public/reg_success.html
@@ -34,6 +34,8 @@
             </div>
         </div>
     </div>
+    <div id="code_tooken" style="display: none"></div>
+    <div id="code_e_tooken" style="display: none"></div>
 </body>
 <script src="./js/_global.js"></script>
 <script src="./js/reg_success.js"></script>
