--- a/public/index.html
+++ b/public/index.html
@@ -215,13 +215,8 @@
         <div class="body-limit">
             <h3 class="md-text-setting">新品商品</h3>
             <div class="row">
-                <div class="col-xs-12 col-md-8">
-                    <div class="row">
-                        012332
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-4">
-                    3333
+                <div class="col-xs-12">
+                    
                 </div>
             </div>
         </div>
