--- a/public/check_your_email.html
+++ b/public/check_your_email.html
@@ -19,7 +19,14 @@
                         <p class="inf_plain" id="p1_edit">我们稍后会向您刚才注册所用的电子邮箱发送一封邮件，点击邮件中的蓝色链接即可完成账号注册。</p>
                         <p class="inf_grey" id="p2_edit">此邮件可能会被自动拦截，如未收到邮件，请检查邮件的垃圾箱。</p>
                     </div>
-                    <div class="newLink" style="justify-content: flex-end; margin: 60px 0 0 50%; align-items: flex-end; height: auto">
+                    <div class="some-words" style="padding: 20px 0 10px">
+                        <div class="nextStep" style="justify-content: flex-start">
+                            <div class="btn-next flex-center trans-all-200" tabindex="0" id="identifyNow">
+                                <span>重新发送</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="newLink" style="justify-content: flex-end; margin: 0 0 0 50%; align-items: flex-end; height: auto">
                         <span class="trans-bc-500" id="delta_edit" data-href="./login.html" style="margin-right: -8px; position: relative; overflow: hidden;">我知道了</span>
                     </div>
                 </div>
