--- a/public/index.html
+++ b/public/index.html
@@ -175,35 +175,38 @@
                 </div>
             </section>
         </div>
-        <!-- search panel 全屏搜索 -->
     </div>
-    <div class="container-fluid main-body part-b">
+    <div class="container-fluid main-body part-a">
         <div class="body-limit">
             <ul class="row">
                 <li class="col-xs-6 col-md-3">
                     <div class="under-car">
-                        <img src="./_test/i-0.png" alt="under-car-pic1">
+                        <div class="img-loader-cover" data-source='{"src":"./img/img-loader-cover/i-0.png","width": "190px", "height": "130px", "bgcolor": "#4082fc"}' style="width: 190px; height: 130px">
+                        </div>
                         <em class="md-text-setting">展示区域标题</em>
                         <p class="md-text-setting">subtitle</p>
                     </div>
                 </li>
                 <li class="col-xs-6 col-md-3">
                     <div class="under-car">
-                        <img src="./_test/i-1.png" alt="under-car-pic1">
+                        <div class="img-loader-cover" data-source='{"src":"./img/img-loader-cover/i-1.png","width": "190px", "height": "130px", "bgcolor": "#45dfdf"}' style="width: 190px; height: 130px">
+                        </div>
                         <em class="md-text-setting">展示区域标题</em>
                         <p class="md-text-setting">subtitle</p>
                     </div>
                 </li>
                 <li class="col-xs-6 col-md-3">
                     <div class="under-car">
-                        <img src="./_test/i-2.png" alt="under-car-pic1">
+                        <div class="img-loader-cover" data-source='{"src":"./img/img-loader-cover/i-2.png","width": "190px", "height": "130px", "bgcolor": "#4859fd"}' style="width: 190px; height: 130px">
+                        </div>
                         <em class="md-text-setting">展示区域标题</em>
                         <p class="md-text-setting">subtitle</p>
                     </div>
                 </li>
                 <li class="col-xs-6 col-md-3">
                     <div class="under-car">
-                        <img src="./_test/i-3.png" alt="under-car-pic1">
+                        <div class="img-loader-cover" data-source='{"src":"./img/img-loader-cover/i-3.png","width": "190px", "height": "130px", "bgcolor": "#968544"}' style="width: 190px; height: 130px">
+                        </div>
                         <em class="md-text-setting">展示区域标题</em>
                         <p class="md-text-setting">subtitle</p>
                     </div>
@@ -211,13 +214,78 @@
             </ul>
         </div>
     </div>
-    <div class="container-fluid main-body part-a">
-        <div class="body-limit">
+    <div class="container-fluid main-body part-b" style="padding: 0; padding-bottom: 10px">
+        <div class="body-limit" style="min-width: 100%">
             <h3 class="md-text-setting">新品商品</h3>
-            <div class="row">
-                <div class="col-xs-12">
-                    
+            <div class="row" style="margin: 0">
+                <div class="col-xs-12 under-car-node-pic flex-center pic-box">
+                    <div class="img-loader-cover" data-source='{"src":"./_test/index/0.png","width": "100%", "height": "100%", "bgcolor": "#968544"}'>
+                    </div>
+                    <!-- <div class="preloader">
+                        <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+                    </div> -->
                 </div>
+            </div>
+        </div>
+        <div class="body-limit">
+            <div class="sp" style="padding-top: 10px; width: 100%"></div>
+            <div class="row" style="margin: 0">
+                <div class="col-xs-12 col-md-6 under-car-branch-pic flex-center pic-box">
+                    <div class="img-loader-cover" data-source='{"src":"./_test/index/1.png","width": "100%", "height": "100%", "bgcolor": "#968544"}'>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 under-car-branch-pic flex-center pic-box" data-img="./_test/index/2.png">
+                    <div class="img-loader-cover" data-source='{"src":"./_test/index/2.png","width": "100%", "height": "100%", "bgcolor": "#968544"}'>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="margin: 0;">
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic flex-center pic-box" data-img="./_test/index/3.png">
+                    <div class="img-loader-cover" data-source='{"src":"./_test/index/3.png","width": "100%", "height": "100%", "bgcolor": "#968544"}'>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic flex-center pic-box" data-img="./_test/index/4.png">
+                    <div class="img-loader-cover" data-source='{"src":"./_test/index/4.png","width": "100%", "height": "100%", "bgcolor": "#968544"}'>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic flex-center pic-box" data-img="./_test/index/5.png">
+                    <div class="img-loader-cover" data-source='{"src":"./_test/index/5.png","width": "100%", "height": "100%", "bgcolor": "#968544"}'>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic">
+                    <div class="img-loader-cover" data-source='{"src":"./_test/index/6.png","width": "100%", "height": "100%", "bgcolor": "#968544"}'>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="margin: 0">
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: blueviolet"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: orange"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: orangered"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: purple"></div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid main-body part-a" style="padding: 0; padding-bottom: 10px">
+        <div class="body-limit" style="min-width: 100%">
+            <h3 class="md-text-setting">推荐栏目</h3>
+            <div class="row" style="margin: 0">
+                <div class="col-xs-12 under-car-node-pic" style="background-image: url(./_test/1.png)">
+                </div>
+            </div>
+        </div>
+        <div class="body-limit">
+            <div class="sp" style="padding-top: 10px; width: 100%"></div>
+            <div class="row" style="margin: 0;">
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: orange"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: orangered"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: purple"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: blueviolet"></div>
+            </div>
+            <div class="row" style="margin: 0">
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: blueviolet"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: orange"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: orangered"></div>
+                <div class="col-xs-6 col-md-3 under-car-leaves-pic" style="background-color: purple"></div>
             </div>
         </div>
     </div>
@@ -225,7 +293,7 @@
         <div class="body-limit">
             <h3 class="md-text-setting">零食</h3>
             <div class="row" style="margin: 0">
-                <div class="col-xs-12 under-car-node-pic">
+                <div class="col-xs-12">
                     <div class="row" style="margin: 0">
                         <div class="col-xs-12 col-md-6 left-21"></div>
                         <div class="col-xs-12 col-md-6 right-21">
@@ -239,6 +307,29 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid main-body part-b" style="padding: 0; padding-bottom: 20px">
+        <div class="body-limit">
+            <h3 class="md-text-setting">蔬果</h3>
+            <div class="row" style="margin: 0">
+                <div class="col-xs-12">
+                    <div class="row" style="margin: 0">
+                        <div class="col-xs-12 col-md-6 right-21">
+                            <div class="row">
+                                <div class="col-xs-12 right-21" style="height: 225px"></div>
+                                <div class="col-xs-12 right-21" style="height: auto">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-md-6 right-41"></div>
+                                        <div class="col-xs-12 col-md-6 right-41" style="background-color: black"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-6 left-21"></div>
                     </div>
                 </div>
             </div>
@@ -290,6 +381,7 @@
             <span>© Ele Mall Inc. All Rights Reserved.</span>
         </div>
     </footer>
+    <!-- search panel 全屏搜索 -->
     <div class="search_panel" id="search_panel">
         <div class="panel_box">
             <div class="box_inner trans-all-200">
