添加 购物车界面删除、恢复物品 功能逻辑

--- a/public/my_cart.html
+++ b/public/my_cart.html
@@ -199,6 +199,8 @@
 		</div>
 	</div>
 	<div class="bottom-bar">
+		<div class="del-sels flex-center trans-all-200" data-visibility="false"><i class="md-ico trans-bc-500" title="删除所选">&#xe872;</i></div>
+		<div class="del-redo flex-center trans-all-200"><i class="md-ico trans-bc-500" title="撤销操作">&#xe15a;</i></div>
 		<div class="bt-bar-left trans-bg-500">
 			<input type="checkbox" id="selAll">
 			<label class="selAll flex-center md-text-setting" id="selAll_toggle" for="selAll"><span></span></label>
