收货地址界面修改、baseURL修改

--- a/public/add_picker.html
+++ b/public/add_picker.html
@@ -71,44 +71,51 @@
                     <div class="footer-sym flex-center"><i class="md-ico trans-bc-100">&#xe5cc;</i></div>
                 </div>
             </div>
-            <h2 class="title md-text-setting">地址二</h2>
-            <div class="setting-group-box address-box">
-                <div class="setting-list no-icon open_dia" data-sel='{"lv":0,"val":"北京市","use-for-address":"1"}'>
+            <h2 class="title md-text-setting">其他设置</h2>
+            <div class="setting-group-box address-settings">
+                <div class="setting-list md-switcher no-sub">
                     <div class="hl trans-all-200"></div>
-                    <div class="header-icon flex-center"><i class="md-ico">&#xe051;</i></div>
+                    <div class="header-icon flex-center"><i class="md-ico"">&#xe0c8;</i></div>
                     <div class="content-main md-text-setting">
-                        <div class="label">北京市</div>
-                        <div class="sub-label">省份/直辖市</div>
+                        <div class="label">设为购买的默认地址</div>
+                    </div>
+                    <div class="footer-sym">
+                        <div class="material-toggle">
+                            <input id="MaterialToggle" name="md-toggle" type="checkbox"/>
+                            <label for="MaterialToggle" class="md-label"><span></span></label>
+                        </div>
+                    </div>
+                </div>
+                <div class="setting-list">
+                    <div class="hl trans-all-200"></div>
+                    <div class="header-icon flex-center"><i class="md-ico">&#xe892;</i></div>
+                    <div class="content-main md-text-setting">
+                        <div class="label">地址标签</div>
+                        <div class="sub-label">为当前地址设置自定义标签</div>
                     </div>
                     <div class="footer-sym flex-center"><i class="md-ico trans-bc-100">&#xe5cc;</i></div>
                 </div>
-                <div class="setting-list no-icon open_dia" data-sel='{"lv":1,"val":"北京市","use-for-address":"1"}'>
+                <div class="setting-list">
                     <div class="hl trans-all-200"></div>
-                    <div class="header-icon flex-center"><i class="md-ico">&#xe051;</i></div>
+                    <div class="header-icon flex-center"><i class="md-ico">&#xe851;</i></div>
                     <div class="content-main md-text-setting">
-                        <div class="label">北京市</div>
-                        <div class="sub-label">市</div>
+                        <div class="label">XXX</div>
+                        <div class="sub-label">修改收件人名称</div>
                     </div>
                     <div class="footer-sym flex-center"><i class="md-ico trans-bc-100">&#xe5cc;</i></div>
                 </div>
-                <div class="setting-list no-icon open_dia" data-sel='{"lv":2,"val":"东城区","use-for-address":"1"}'>
+                <div class="setting-list">
                     <div class="hl trans-all-200"></div>
-                    <div class="header-icon flex-center"><i class="md-ico">&#xe051;</i></div>
+                    <div class="header-icon flex-center"><i class="md-ico">&#xe0cd;</i></div>
                     <div class="content-main md-text-setting">
-                        <div class="label">东城区</div>
-                        <div class="sub-label">区/县</div>
+                        <div class="label">185****6544</div>
+                        <div class="sub-label">修改收件人联系方式</div>
                     </div>
                     <div class="footer-sym flex-center"><i class="md-ico trans-bc-100">&#xe5cc;</i></div>
                 </div>
-                <div class="setting-list no-icon open_dia" data-sel='{"lv":3,"val":"建设路0123号小区123栋202","use-for-address":"1"}'>
-                    <div class="hl trans-all-200"></div>
-                    <div class="header-icon flex-center"><i class="md-ico">&#xe051;</i></div>
-                    <div class="content-main md-text-setting">
-                        <div class="label">建设路0123号小区123栋202</div>
-                        <div class="sub-label">详细地址</div>
-                    </div>
-                    <div class="footer-sym flex-center"><i class="md-ico trans-bc-100">&#xe5cc;</i></div>
-                </div>
+            </div>
+            <div class="delete-danger flex-center">
+                <div class="outline-btn deleteBtn flex-center"><span>删除收货地址</span></div>
             </div>
         </div>
         <div class="dia_bg trans-all-200">
