--- a/public/check_your_email.html
+++ b/public/check_your_email.html
@@ -27,11 +27,11 @@
                         </div>
                     </div>
                     <div class="newLink" style="justify-content: flex-end; margin: 0 0 0 50%; align-items: flex-end; height: auto">
-                        <span class="trans-bc-500" id="delta_edit" data-href="./login.html" style="margin-right: -8px; position: relative; overflow: hidden;">我知道了</span>
+                        <span class="trans-bc-500" id="delta_edit" data-href="./index" style="margin-right: -8px; position: relative; overflow: hidden;">我知道了</span>
                     </div>
                 </div>
                 <div class="have-a-look col-md-6 col-xs-12 xs-d-none md-d-block">
-                    <div class="img-right-display reg_success" id="img_edit" style="background-image: url(&quot;./_test/rs-1.png&quot;);">
+                    <div class="img-right-display reg_success" id="img_edit" style="background-image: url(./_test/rs-1.png);">
                         <div class="web-slogan pre-text-setting">
                             <p class="md-text-setting" id="mtt_edit" style="line-height: 100%; margin: 0">验证您的邮件地址</p>
                         </div>
