更换 Ajax 核心函数（AjaxToolBox.js）、用户中心界面 UI 修改
更换 Ajax 函数 -> 解决 IE 报错：SCRIPT5022: InvalidStateError
其他大部分页面的 post 流程方法重写

--- a/public/register.html
+++ b/public/register.html
@@ -76,5 +76,6 @@
     </div>
 </body>
 <script src="./js/_global.js"></script>
+<script src="./js/AjaxToolbox.js"></script>
 <script src="./js/register.js"></script>
 </html>
