--- a/public/add_picker.html
+++ b/public/add_picker.html
@@ -130,5 +130,6 @@
 </body>
 <script src="./js/_global.js" type="text/javascript"></script>
 <script src="./js/cities.js" type="text/javascript"></script>
+<script src="./js/AjaxToolbox.js" type="text/javascript"></script>
 <script src="./js/editPage.js" type="text/javascript"></script>
 </html>
