--- a/public/avatars_editor.html
+++ b/public/avatars_editor.html
@@ -52,7 +52,7 @@
                         <input class="md-text-setting" id="fg_text" type="text" value="">
                         <span class="oWo"></span>
                         <div class="place-holder">前景文字</div>
-                        <div class="err-words danger"><i class="md-ico">&#xe000;</i><span>默认取用户名首字，仅支持单字</span></div>
+                        <div class="err-words md-text-setting danger"><i class="md-ico">&#xe000;</i><span>默认取用户名首字，仅支持单字</span></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
@@ -60,7 +60,7 @@
                         <input class="md-text-setting" id="fg_color" type="text" value="">
                         <span class="oWo"></span>
                         <div class="place-holder">前景颜色</div>
-                        <div class="err-words danger"><i class="md-ico">&#xe000;</i><span>16进制颜色值，例如 #fff、#ff6789</span></div>
+                        <div class="err-words md-text-setting danger"><i class="md-ico">&#xe000;</i><span>16进制颜色值，例如 #fff、#ff6789</span></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
@@ -68,7 +68,7 @@
                         <input class="md-text-setting" id="bg_color" type="text" value="">
                         <span class="oWo"></span>
                         <div class="place-holder">背景颜色</div>
-                        <div class="err-words danger"><i class="md-ico">&#xe000;</i><span>16进制颜色值</span></div>
+                        <div class="err-words md-text-setting danger"><i class="md-ico">&#xe000;</i><span>16进制颜色值</span></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 color-group hidden">
@@ -79,22 +79,20 @@
                     <span class="color_picker" style="background-color: #f9df83" title="#f9df83"></span>
                 </div>
             </div>
-            <div class="row" style="margin: 0;">
-                <h2 class="md-text-setting" style="padding-left: 16px;">背景样式</h2>
-                <div class="row pattern-group" style="margin: 0;">
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/00.svg" alt="纯色"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/01.svg" alt="格子"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/02.svg" alt="纵波"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/03.svg" alt="横波"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/04.svg" alt="纵"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/05.svg" alt="右斜"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/06.svg" alt="横"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/07.svg" alt="左斜"></div>
-                    <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/08.svg" alt="方块"></div>
-                </div>
+            <h2 class="md-text-setting" style="padding-left: 16px;">背景样式</h2>
+            <div class="row pattern-group" style="margin: 0;">
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/00.svg" alt="纯色"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/01.svg" alt="格子"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/02.svg" alt="纵波"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/03.svg" alt="横波"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/04.svg" alt="纵"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/05.svg" alt="右斜"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/06.svg" alt="横"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/07.svg" alt="左斜"></div>
+                <div class="col-xs-4 col-md-3 flex-center pattern"><img src="./img/profiles/08.svg" alt="方块"></div>
             </div>
-            <div class="button-opt flex-center" style="justify-content: flex-end; margin: 0 23.5px;">
-                <div class="outline-btn flex-center" style="margin-right: 15px;" id="preview_it"><span>预览</span></div>
+            <div class="button-opt flex-center pull-right">
+                <div class="outline-btn flex-center" style="margin-right: 25px;" id="preview_it"><span>预览</span></div>
                 <div class="outline-btn flex-center" id="save_it"><span>保存</span></div>
             </div>
         </div>
@@ -109,6 +107,7 @@
     </div>
 </body>
 <script src="./js/_global.js" type="text/javascript"></script>
+<script src="./js/AjaxToolbox.js" type="text/javascript"></script>
 <script src="./js/profile_data_base.js" type="text/javascript"></script>
 <script src="./js/avatars_editor.js" type="text/javascript"></script>
 </html>
