--- a/public/index1.html
+++ b/public/index1.html
@@ -524,5 +524,6 @@
     </div>
 </body>
 <script src="./js/_global.js" type="text/javascript"></script>
+<script src="./js/AjaxToolbox.js" type="text/javascript"></script>
 <script src="./js/index.js" type="text/javascript"></script>
 </html>
