--- a/public/login.html
+++ b/public/login.html
@@ -86,5 +86,6 @@
     </div>
 </body>
 <script src="./js/_global.js"></script>
+<script src="./js/AjaxToolbox.js"></script>
 <script src="./js/login.js"></script>
 </html>
